feat: standardize environment configuration and improve Docker deployment setup